@@ -1,3 +1,9 @@
+2012-05-31 Graeme Stewart <graeme.andrew.stewart@cern.ch>
+    * Fix for hybrid merger (MergePoolJobTransform) to work correctly
+      with old mergePOOL.exe, which always has rc=1
+    * Remove misleading log message from Merging_trf
+    * Tagging as PATJobTransforms-00-04-15
+    
 2012-05-18 Graeme Stewart <graeme.andrew.stewart@cern.ch>
     * Apply quotes around the 'echo' of the trf command in ArgDictTools, ensuring that 
       the command can be copied and pasted properly.
